# nvmr-json

./: CMakeLists.txt  Jenkinsfile  NVMR-JSON.pro  networksettings.cpp  networksettings.h  nvmr-json.pc.cmake  streaminformation.cpp  streaminformation.h  videosenderconfiguration.cpp  videosenderconfiguration.h  videosendermessage.cpp  videosendermessage.h  videosettings.cpp  videosettings.h
debian/: changelog  control  copyright  rules
